# fake-news-detection

./: LICENSE  README.md  phase2.ipynb  phase2_v2.ipynb  phase2_v2_final.ipynb  phase2_v3.ipynb  phase2_v3_final.ipynb  psycholinguistic.py  pyproject.toml  readability.py  welfake_eda.ipynb  welfake_eda_v1.ipynb  welfake_modelling.ipynb  welfake_modelling_2.ipynb
