[project]
name = "welfake"
version = "0.1.0"
description = "ITI5202 Assessment"
authors = [
    {name = "Corneliusluis",email = "cornelius.luis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10.14,<3.14"
dependencies = [
    "pyspark (==3.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "numpy (>=1.32.0)",
    "pandas (>=0.23.2)",
    "textstat (>=0.7.8,<0.8.0)",
    "textblob (>=0.19.0,<0.20.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "spacy (>=3.8.7,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false